adding commnet on responsive website

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="nav-container">
                 <ul class="nav-list">
                     <li class="nav-item">
+                        <!-- Lnkes for Navbar -->
                         <a href="#">
                             <font style="color: var(--button-bg-color)">Home</font>
                         </a>
